custom-resource/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: primary-keycloak
  namespace: keycloak
spec:
  host: primary-keycloak.keycloak.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
